crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef enum {
  PamojaLorawanDirection_Uplink = 0,
  PamojaLorawanDirection_Downlink = 1,
} PamojaLorawanDirection;
typedef enum {
  PamojaForward_Deliver = 0,
  PamojaForward_Relay = 1,
  PamojaForward_Flood = 2,
} PamojaForward;
typedef struct PamojaBuffer PamojaBuffer;
typedef struct PamojaLorawanRx PamojaLorawanRx;
typedef struct PamojaLorawanSession PamojaLorawanSession;
typedef struct PamojaMeshFrame PamojaMeshFrame;
typedef struct PamojaRouter PamojaRouter;
typedef struct PamojaSeenCache PamojaSeenCache;
typedef struct {
  uint32_t bandwidth_hz;
  uint16_t preamble_symbols;
  uint8_t spreading_factor;
  uint8_t coding_rate_denominator;
  uint8_t explicit_header;
  uint8_t crc;
} PamojaLoraLink;
typedef struct {
  uint8_t confirmed;
  uint8_t adr;
  uint8_t ack;
  uint8_t fpending;
} PamojaLorawanFlags;
typedef struct {
  uint32_t dst;
  uint32_t next_hop;
  uint16_t cost;
} PamojaRoute;
PamojaLoraLink pamoja_lora_link_default(uint8_t spreading_factor, uint32_t bandwidth_hz);
uint64_t pamoja_lora_symbol_time_us(PamojaLoraLink link);
uint64_t pamoja_lora_airtime_us(PamojaLoraLink link, uintptr_t payload_len);
uint64_t pamoja_lora_min_off_time_us(PamojaLoraLink link,
                                     uintptr_t payload_len,
                                     uint32_t duty_cycle_permille);
PamojaStatus pamoja_lorawan_session_new(uint32_t dev_addr,
                                        const uint8_t *nwk_skey,
                                        uintptr_t nwk_skey_len,
                                        const uint8_t *app_skey,
                                        uintptr_t app_skey_len,
                                        PamojaLorawanSession **out_session);
uint32_t pamoja_lorawan_session_dev_addr(const PamojaLorawanSession *session);
PamojaStatus pamoja_lorawan_session_encode_uplink(const PamojaLorawanSession *session,
                                                  uint32_t fcnt,
                                                  uint8_t fport,
                                                  const uint8_t *payload,
                                                  uintptr_t payload_len,
                                                  const uint8_t *fopts,
                                                  uintptr_t fopts_len,
                                                  PamojaLorawanFlags flags,
                                                  PamojaBuffer **out_frame);
PamojaStatus pamoja_lorawan_session_encode_downlink(const PamojaLorawanSession *session,
                                                    uint32_t fcnt,
                                                    uint8_t fport,
                                                    const uint8_t *payload,
                                                    uintptr_t payload_len,
                                                    const uint8_t *fopts,
                                                    uintptr_t fopts_len,
                                                    PamojaLorawanFlags flags,
                                                    PamojaBuffer **out_frame);
PamojaStatus pamoja_lorawan_session_decode(const PamojaLorawanSession *session,
                                           const uint8_t *bytes,
                                           uintptr_t bytes_len,
                                           uint32_t fcnt,
                                           PamojaLorawanRx **out_rx);
void pamoja_lorawan_session_free(PamojaLorawanSession *session);
PamojaLorawanDirection pamoja_lorawan_rx_direction(const PamojaLorawanRx *rx);
uint32_t pamoja_lorawan_rx_dev_addr(const PamojaLorawanRx *rx);
PamojaStatus pamoja_mesh_frame_new(uint32_t src,
                                   uint32_t dst,
                                   uint16_t id,
                                   const uint8_t *payload,
                                   uintptr_t payload_len,
                                   PamojaMeshFrame **out_frame);
PamojaStatus pamoja_mesh_frame_broadcast(uint32_t src,
                                         uint16_t id,
                                         const uint8_t *payload,
                                         uintptr_t payload_len,
                                         PamojaMeshFrame **out_frame);
PamojaStatus pamoja_mesh_frame_parse(const uint8_t *bytes,
                                     uintptr_t bytes_len,
                                     PamojaMeshFrame **out_frame);
void pamoja_mesh_frame_set_hop_limit(PamojaMeshFrame *frame, uint8_t hop_limit);
uint8_t pamoja_mesh_frame_version(const PamojaMeshFrame *frame);
uint32_t pamoja_mesh_frame_src(const PamojaMeshFrame *frame);
uint32_t pamoja_mesh_frame_dst(const PamojaMeshFrame *frame);
uint16_t pamoja_mesh_frame_id(const PamojaMeshFrame *frame);
uint8_t pamoja_mesh_frame_hop_limit(const PamojaMeshFrame *frame);
bool pamoja_mesh_frame_is_broadcast(const PamojaMeshFrame *frame);
const uint8_t *pamoja_mesh_frame_payload(const PamojaMeshFrame *frame);
uintptr_t pamoja_mesh_frame_payload_len(const PamojaMeshFrame *frame);
const uint8_t *pamoja_mesh_frame_bytes(const PamojaMeshFrame *frame);
uintptr_t pamoja_mesh_frame_bytes_len(const PamojaMeshFrame *frame);
bool pamoja_mesh_frame_relayed(const PamojaMeshFrame *frame, PamojaMeshFrame **out_frame);
void pamoja_mesh_frame_free(PamojaMeshFrame *frame);
uint16_t pamoja_mesh_crc16(const uint8_t *data, uintptr_t data_len);
PamojaSeenCache *pamoja_mesh_seen_new(uintptr_t capacity);
bool pamoja_mesh_seen_contains(const PamojaSeenCache *cache, uint32_t src, uint16_t id);
bool pamoja_mesh_seen_record(PamojaSeenCache *cache, uint32_t src, uint16_t id);
uintptr_t pamoja_mesh_seen_capacity(const PamojaSeenCache *cache);
void pamoja_mesh_seen_free(PamojaSeenCache *cache);
PamojaRouter *pamoja_router_new(uint32_t address, uintptr_t capacity);
uint32_t pamoja_router_address(const PamojaRouter *router);
bool pamoja_router_observe(PamojaRouter *router, uint32_t origin, uint32_t via, uint16_t cost);
bool pamoja_router_next_hop(const PamojaRouter *router, uint32_t dst, uint32_t *out_next_hop);
bool pamoja_router_cost(const PamojaRouter *router, uint32_t dst, uint16_t *out_cost);
bool pamoja_router_route(const PamojaRouter *router, uint32_t dst, PamojaRoute *out_route);
PamojaForward pamoja_router_forward(const PamojaRouter *router,
                                    uint32_t dst,
                                    uint32_t *out_next_hop);
void pamoja_router_forget(PamojaRouter *router, uint32_t dst);
uintptr_t pamoja_router_len(const PamojaRouter *router);
uintptr_t pamoja_router_capacity(const PamojaRouter *router);
void pamoja_router_free(PamojaRouter *router);